--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=8090
+spring.datasource.hikari.driverClassName=org.h2.Driver
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:usuario;DB_CLOSE_DELAY=-1
+spring.datasource.hikari.username=miguel
+spring.datasource.hikari.password=
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
