--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=ldbc:mysql://localhost:330sofware
+spring.datasource.url=ldbc:mysql://localhost:3306/sofware
 spring.datasource.username=root
 spring.datasource.password=
